--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     adipisicing elit. Doloribus, rerum fuga. Quia, ratione similique expedita
     impedit quisquam nesciunt inventore, nemo laudantium nobis cupiditate
     maiores pariatur quaerat eius, fugiat exercitationem. Magni?
+    <h1>This is heading one</h1>
+    <ul>
+      <li>Home</li>
+      <li>About us</li>
+      <li>Contact us</li>
+    </ul>
   </body>
 </html>
